--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
 
 <body>
 
-<section class="container">
-    <section class="texto">
-    <h1>Pinscher</h1>
-    <p>Pinscher é uma categoria de cães das mais violentas do mundo,
-    usados como caçadores de ratos em fazendas da Alemanha e Áustria, e para rinha ou guarda,
-    embora hoje são mais frequentemente mantidos como animais de estimação. A categoria ou grupo
-    engloba cerca de cinco ou mais raças de cães.</p>
-    <p>A Federação Cinológica Internacional (FCI) reconhece as seguintes raças pinscher:
-<li>Pinscher austríaco</li>
-<li>Dobermann</li>
-<li>Pinscher alemão standard</li>
-<li>Pinscher miniatura</li>
-<li>Affenpinscher</li>
-<li>Cão fazendeiro da suécia e dinamarca</li>
-    </p>
+    <section class="container">
+        <section class="texto">
+            <h1>Pinscher</h1>
+            <p>Pinscher é uma categoria de cães das mais violentas do mundo,
+                usados como caçadores de ratos em fazendas da Alemanha e Áustria, e para rinha ou guarda,
+                embora hoje são mais frequentemente mantidos como animais de estimação. A categoria ou grupo
+                engloba cerca de cinco ou mais raças de cães.</p>
+            <p>A Federação Cinológica Internacional (FCI) reconhece as seguintes raças pinscher:</p>
+            <li>Pinscher austríaco</li>
+            <li>Dobermann</li>
+            <li>Pinscher alemão standard</li>
+            <li>Pinscher miniatura</li>
+            <li>Affenpinscher</li>
+            <li>Cão fazendeiro da suécia e dinamarca</li>
+        </section>
+        <section class="imagem">
+            <a href="https://casaeconstrucao.org/animais-domesticos/pinscher/"><img src="pinscher.jpg"
+                    alt="Pinscher"></a>
+        </section>
     </section>
-    <section class="imagem">
-    <a href="https://casaeconstrucao.org/animais-domesticos/pinscher/"><img src="pinscher.jpg" alt="Pinscher"></a>
-    </section>
-</section>
 </body>
+
+</html>
